--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,18 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.lazycashier"
-        minSdkVersion 16
+        applicationId "com.example.sample"
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -30,9 +31,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.tobiasschuerg:android-money:v0.3'
-    implementation 'com.squareup.moshi:moshi:1.8.0'
-    implementation("com.squareup.okhttp3:okhttp:4.2.2")
-    implementation 'com.github.midorikocak:currency-picker-android:1.1.9'
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
+    implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
+    implementation"com.squareup.okhttp3:okhttp:4.2.2"
+
 }
+
+
