added retrofit library to cache currencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.tobiasschuerg:android-money:v0.3'
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
-    implementation("com.squareup.moshi:moshi-kotlin:1.9.2")
-    implementation"com.squareup.okhttp3:okhttp:4.2.2"
+
+    // Retrofit
+    def retrofitVersion = "2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    // okhttp
+    def okHttpVersion = "3.11.0"
+    implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+
 
 }
 
